--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img src="https://nazdov.github.io/iTunesArtwork.jpg"/>
+<img src="nazdov.github.io/iTunesArtwork.jpg"/>
 
 </body>
 
