--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img src="nazdov.github.io/iTunesArtwork.jpg" width=128/>
+<img src="nazdov.github.io/iTunesArtwork.jpg" width="128"/>
 
 </body>
 
