--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </head>
 <body>
 
-<img src="nazdov.github.io/iTunesArtwork.jpg" width="128"/>
+    <div id="container">
+        <div id="top"> 
+            <img src="nazdov.github.io/iTunesArtwork.jpg" width="128"/>
+            <a href="itms-services://?action=download-manifest&url=https://nazdov.github.io/manifest.plist">104mobile.ipa download</a>
+          </div>
+    </div>
+
 
 </body>
 
