--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                 /* margin-left: 20%; */
             ">
                 <img src="nazdov.github.io/iTunesArtwork.jpg" width="128">
-                104mobile.ipa download
-            
+                <h4>
+                104mobile.ipa download link
+                </h4>
             </a>
           </div>
     </div>
