--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <a href="itms-services://?action=download-manifest&amp;url=https://nazdov.github.io/manifest.plist" style="
                 text-decoration:  none;
                 color: #ff9100;
-                /* text-align:  -webkit-center; */
-                /* width:  100%; */
                 position:  relative;
-                /* margin-left: 20%; */
             ">
                 <img src="nazdov.github.io/iTunesArtwork.jpg" width="128">
-                <h4>
+                <h4 style="
+                        margin:  auto;
+                        text-align:  center;
+                    ">
                 104mobile.ipa download link
                 </h4>
             </a>
