--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     text: none;
                     color: #FF9800;"> 
            
-            <a href="itms-services://?action=download-manifest&amp;url=https://nazdov.github.io/manifest.plist" style="
+            <a href="itms-services://?action=download-manifest&url=https://nazdov.github.io/manifest.plist" style="
                 text-decoration:  none;
                 color: #ff9100;
                 position:  relative;
