--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <h4 id="outer">
 
         </h4>
+    <h4 id="browserVer">
+
+    </h4>
 
         <button onclick="test()">
             Refresh
@@ -61,6 +64,21 @@ var screen_viewport_outer = () => {
     }
 };
 
+navigator.browserVer= (function(){
+    var ua= navigator.userAgent, tem, 
+    M= ua.match(/(opera|chrome|safari|firefox|msie|trident(?=\/))\/?\s*(\d+)/i) || [];
+    if(/trident/i.test(M[1])){
+        tem=  /\brv[ :]+(\d+)/g.exec(ua) || [];
+        return 'IE '+(tem[1] || '');
+    }
+    if(M[1]=== 'Chrome'){
+        tem= ua.match(/\b(OPR|Edge)\/(\d+)/);
+        if(tem!= null) return tem.slice(1).join(' ').replace('OPR', 'Opera');
+    }
+    M= M[2]? [M[1], M[2]]: [navigator.appName, navigator.appVersion, '-?'];
+    if((tem= ua.match(/version\/(\d+)/i))!= null) M.splice(1, 1, tem[1]);
+    return M.join(' ');
+})();
 
 // testing
 var test = function() {
@@ -70,6 +88,8 @@ var test = function() {
     var o_obj = screen_viewport_outer();
     var outerObj = document.getElementById('inner');
     outerObj.innerText = JSON.stringify(o_obj);
+    var browserVerObject = document.getElementById('browserVer');
+    browserVerObject.innerText = "BrowserVersion: "+navigator.browserVer;
 };
 
 // IIFE
